--- a/extension/cluster/management/kubernetes/promena-cluster-management-kubernetes-configuration/src/main/resources/module-cluster-management-kubernetes.properties
+++ b/extension/cluster/management/kubernetes/promena-cluster-management-kubernetes-configuration/src/main/resources/module-cluster-management-kubernetes.properties
@@ -1,10 +1,20 @@
-akka.management.http.hostname=127.0.0.1
-akka.management.http.bind-hostname=0.0.0.0
+akka.remote.netty.tcp.hostname=${kubernetes.promena.pod.ip}
+
+akka.management.http.hostname=${kubernetes.promena.pod.ip}
+akka.management.http.bind-hostname=${kubernetes.promena.pod.ip}
 akka.management.http.port=8558
 akka.management.http.bind-port=8558
 
-akka.management.cluster.bootstrap.contact-point-discovery.required-contact-point-nr=2
+akka.management.cluster.bootstrap.contact-point-discovery.required-contact-point-nr=1
+akka.management.cluster.bootstrap.contact-point-discovery.port-name=management
 
 akka.discovery.method=kubernetes-api
-akka.discovery.kubernetes-api.pod-namespace=default
-akka.discovery.kubernetes-api.pod-label-selector=app=promena
+akka.discovery.kubernetes-api.pod-namespace=${kubernetes.promena.namespace}
+akka.discovery.kubernetes-api.pod-label-selector=app=${kubernetes.promena.label.app}
+
+akka.cluster.downing-provider-class=tanukki.akka.cluster.autodown.MajorityLeaderAutoDowning
+
+akka.custom-downing.stable-after=10s
+akka.custom-downing.majority-leader-auto-downing.majority-member-role=
+akka.custom-downing.majority-leader-auto-downing.down-if-in-minority=true
+akka.custom-downing.majority-leader-auto-downing.shutdown-actor-system-on-resolution=true
