--- a/base/promena-executable/src/docker/Dockerfile
+++ b/base/promena-executable/src/docker/Dockerfile
@@ -1,12 +1,7 @@
 FROM azul/zulu-openjdk-centos:11.0.3
 
 RUN yum update -y && \
-    yum install -y wget && \
-    # Maven
-    cd opt && \
-    wget https://www-eu.apache.org/dist/maven/maven-3/3.6.1/binaries/apache-maven-3.6.1-bin.tar.gz && \
-    tar xzf apache-maven-3.6.1-bin.tar.gz && \
-    rm -f apache-maven-3.6.1-bin.tar.gz
+    yum clean all && rm -rf /tmp/* /var/tmp/* /var/cache/yum/*
 
 ENV JRE_HOME /usr/lib/jvm/zulu-11
 ENV JAVA_HOME /usr/lib/jvm/zulu-11
