[fixed][promena-cluster-management-kubernetes] Properties prefix

--- a/extension/cluster/management/kubernetes/promena-cluster-management-kubernetes-configuration/src/main/resources/module-cluster-management-kubernetes.properties
+++ b/extension/cluster/management/kubernetes/promena-cluster-management-kubernetes-configuration/src/main/resources/module-cluster-management-kubernetes.properties
@@ -14,7 +14,7 @@ akka.discovery.kubernetes-api.pod-label-selector=app=${kubernetes.promena.label.
 
 akka.cluster.downing-provider-class=tanukki.akka.cluster.autodown.MajorityLeaderAutoDowning
 
-akka.custom-downing.stable-after=10s
-akka.custom-downing.majority-leader-auto-downing.majority-member-role=
-akka.custom-downing.majority-leader-auto-downing.down-if-in-minority=true
-akka.custom-downing.majority-leader-auto-downing.shutdown-actor-system-on-resolution=true
+custom-downing.stable-after=10s
+custom-downing.majority-leader-auto-downing.majority-member-role=
+custom-downing.majority-leader-auto-downing.down-if-in-minority=true
+custom-downing.majority-leader-auto-downing.shutdown-actor-system-on-resolution=true
