[improved][alfresco-promena-client] Default property max-attempts and next-attempt-delay values (20 and 15s) [improved][alfresco-promena-client] Retry logging [improved][docker][alfresco-promena-message-broker-client][alfresco-promena-http-client] Alfresco-promena-client dependencies

--- a/mm/alfresco-promena-http-client/src/main/docker/alfresco-global.properties
+++ b/mm/alfresco-promena-http-client/src/main/docker/alfresco-global.properties
@@ -15,7 +15,7 @@
 # RUN TIME PROPERTIES
 # -------------------
 
-promena.client.http.base-url=http://172.17.0.1:8085
+promena.client.http.base-url=http://promena:8080
 
 #
 # Alfresco configuration for running locally with PostgreSQL Database
