[improved][alfresco-promena-message-broker-client] Adapted to new retry logging function signature [fixed][alfresco-promena-message-broker-client] Delaying another attempt [improved][alfresco-promena-message-broker-client] When the number of attempts is exceeded, error response queue will be contain last error message

--- a/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-retry-test.properties
+++ b/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-retry-test.properties
@@ -1,13 +1,16 @@
 # 100MB
 promena.client.serializer.kryo.buffer-size=104857600
 
+promena.client.communication.file.location=
+
 promena.client.transformation.error.retry.enabled=true
-promena.client.transformation.error.retry.max-attempts=1
+promena.client.transformation.error.retry.max-attempts=2
 promena.client.transformation.error.retry.next-attempt-delay=500ms
 
 promena.client.message-broker.consumer.queue.request=Promena.request
 promena.client.message-broker.consumer.queue.response=Promena.response
 promena.client.message-broker.consumer.queue.response.error=Promena.response.error
+promena.client.message-broker.consumer.queue.response.error.selector=send_back_attempt < ${promena.client.transformation.error.retry.max-attempts}
 
 promena.client.message-broker.spring.activemq.broker-url=failover:(nio://localhost:{PORT})?timeout=3000&jms.useCompression=true
 promena.client.message-broker.spring.jms.pub-sub-domain=false
