--- a/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-sender-test.properties
+++ b/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-sender-test.properties
@@ -10,6 +10,7 @@ promena.client.transformation.error.retry.next-attempt-delay=0ms
 promena.client.message-broker.consumer.queue.request=Promena.request
 promena.client.message-broker.consumer.queue.response=Promena.response
 promena.client.message-broker.consumer.queue.response.error=Promena.response.error
+promena.client.message-broker.consumer.queue.response.error.selector=send_back_attempt < ${promena.client.transformation.error.retry.max-attempts}
 
 promena.client.message-broker.spring.activemq.broker-url=failover:(nio://localhost:{PORT})?timeout=3000&jms.useCompression=true
 promena.client.message-broker.spring.jms.pub-sub-domain=false
