[improved][promena] Moved CommunicationParameters from core to transformer

--- a/base/promena-core/promena-core-internal/pom.xml
+++ b/base/promena-core/promena-core-internal/pom.xml
@@ -29,5 +29,11 @@
             <groupId>de.javakaffee</groupId>
             <artifactId>kryo-serializers</artifactId>
         </dependency>
+        
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
