[improved][alfresco-promena-client] Separated communication parameters to ExternalCommunication class (as a bean) [improved][alfresco-promena-http-client][alfresco-promena-message-broker-client] Updated alfresco-promena-client amp

--- a/mm/alfresco-promena-client/src/main/resources/alfresco/module/alfresco-promena-client/alfresco-global.properties
+++ b/mm/alfresco-promena-client/src/main/resources/alfresco/module/alfresco-promena-client/alfresco-global.properties
@@ -1,7 +1,9 @@
 # 100MB
 promena.client.serializer.kryo.buffer-size=104857600
 
-promena.client.communication.file.location=
+# memory/file
+promena.client.communication.external.id=memory
+promena.client.communication.external.file.location=
 
 promena.client.transformation.error.retry.enabled=true
 promena.client.transformation.error.retry.max-attempts=20
