[improved][alfresco-promena-client][alfresco-promena-http-client][alfresco-promena-message-broker-client] Extracted communication configuration to ExternalCommunication in alfresco-promena-client. By default memory and file communication is supported.

--- a/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-sender-test.properties
+++ b/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-sender-test.properties
@@ -1,7 +1,9 @@
 # 100MB
 promena.client.serializer.kryo.buffer-size=104857600
 
-promena.client.communication.file.location=file:/tmp
+# memory/file
+promena.client.communication.external.id=file
+promena.client.communication.external.file.location=file:/tmp
 
 promena.client.transformation.error.retry.enabled=false
 promena.client.transformation.error.retry.max-attempts=0
