--- a/extension/connector/http/pom.xml
+++ b/extension/connector/http/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>pl.beone.promena.sdk</groupId>
+        <groupId>pl.beone.promena.sdk.maven.parent</groupId>
         <artifactId>promena-extension-parent</artifactId>
         <version>0.9.0</version>
     </parent>
