--- a/sdk/promena-transformer/promena-transformer-archetype/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-archetype/pom.xml
@@ -4,10 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-<!--    TODO moze maven sdk?-->
-    <groupId>pl.beone.promena.sdk</groupId>
+    <groupId>pl.beone.promena.sdk.maven.archetype</groupId>
     <artifactId>promena-transformer-archetype</artifactId>
-    <version>1.0.0-alpha</version>
+    <version>0.9.0</version>
     <packaging>maven-archetype</packaging>
 
     <name>[SDK][ARCHETYPE] Promena transformer</name>
