--- a/sdk/promena-transformer/promena-transformer-parent/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-parent/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>pl.beone.promena.sdk</groupId>
+    <groupId>pl.beone.promena.sdk.maven.parent</groupId>
     <artifactId>promena-transformer-parent</artifactId>
     <version>0.9.0</version>
     <packaging>pom</packaging>
