--- a/lib/docker-test-runner/src/test/resources/base-docker-test.properties
+++ b/lib/docker-test-runner/src/test/resources/base-docker-test.properties
@@ -2,6 +2,7 @@ docker.test.project.path=${basedir}
 docker.test.project.container.path=/test
 
 docker.test.maven.container.test.command=surefire:test
+docker.test.maven.container.test.run-after=rm -Rf /test/target/surefire-reports
 
 docker.test.image.name=
 docker.test.image.custom.enabled=true
