[improved][promena-transformer-archetype] Implemented archetype example transformer - HashAppender (adding hash at the end of data) [improved][promena-transformer-archetype] Adapted to new interfaces

--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/src/docker/Dockerfile
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/src/docker/Dockerfile
@@ -1,12 +1,14 @@
 FROM azul/zulu-openjdk-centos:11.0.3
 
+ENV MAVEN_VERSION 3.6.1
+
 RUN yum update -y && \
     yum install -y wget && \
     # Maven
     cd opt && \
-    wget https://www-eu.apache.org/dist/maven/maven-3/3.6.1/binaries/apache-maven-3.6.1-bin.tar.gz && \
-    tar xzf apache-maven-3.6.1-bin.tar.gz && \
-    rm -f apache-maven-3.6.1-bin.tar.gz
+    wget https://www-eu.apache.org/dist/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz && \
+    tar xzf apache-maven-$MAVEN_VERSION-bin.tar.gz && \
+    rm -f apache-maven-$MAVEN_VERSION-bin.tar.gz
 
 ENV JRE_HOME /usr/lib/jvm/zulu-11
 ENV JAVA_HOME /usr/lib/jvm/zulu-11
