--- a/base/promena-transformer/promena-transformer-internal/pom.xml
+++ b/base/promena-transformer/promena-transformer-internal/pom.xml
@@ -25,6 +25,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
