--- a/sdk/promena-transformer/promena-transformer-parent/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-parent/pom.xml
@@ -46,6 +46,8 @@
 
         <logback.version>1.2.3</logback.version>
         <junit.version>4.12</junit.version>
+        <kotlintest-runner-junit4.version>3.3.3</kotlintest-runner-junit4.version>
+        <mockk.version>1.9.3</mockk.version>
         <docker-test-runner.version>0.9.0</docker-test-runner.version>
 
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -103,6 +105,16 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.kotlintest</groupId>
+                <artifactId>kotlintest-runner-junit4</artifactId>
+                <version>${kotlintest-runner-junit4.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.mockk</groupId>
+                <artifactId>mockk</artifactId>
+                <version>${mockk.version}</version>
             </dependency>
             <dependency>
                 <groupId>pl.beone.lib</groupId>
