[improved][all] Renamed from InMemoryData to MemoryData

--- a/base/promena-core/configuration/promena-core-configuration/src/main/resources/application-kryo-classes.properties
+++ b/base/promena-core/configuration/promena-core-configuration/src/main/resources/application-kryo-classes.properties
@@ -16,7 +16,7 @@ akka.actor.kryo.classes.12=pl.beone.promena.transformer.applicationmodel.excepti
 akka.actor.kryo.classes.13=pl.beone.promena.transformer.contract.descriptor.DataDescriptor
 akka.actor.kryo.classes.14=pl.beone.promena.transformer.contract.descriptor.TransformationDescriptor
 akka.actor.kryo.classes.15=pl.beone.promena.transformer.contract.descriptor.TransformedDataDescriptor
-akka.actor.kryo.classes.16=pl.beone.promena.transformer.internal.model.data.InMemoryData
+akka.actor.kryo.classes.16=pl.beone.promena.transformer.internal.model.data.MemoryData
 akka.actor.kryo.classes.17=pl.beone.promena.transformer.internal.model.data.FileData
 akka.actor.kryo.classes.18=pl.beone.promena.transformer.internal.model.metadata.MapMetadata
 akka.actor.kryo.classes.19=pl.beone.promena.transformer.internal.model.parameters.MapParameters
