--- a/extension/communication/internal/memory/promena-communication-internal-memory-configuration/src/main/resources/module-communication-internal-memory.properties
+++ b/extension/communication/internal/memory/promena-communication-internal-memory-configuration/src/main/resources/module-communication-internal-memory.properties
@@ -1,1 +1,3 @@
 akka.actor.kryo.classes.1000=pl.beone.promena.communication.internal.memory.internal.MemoryInternalCommunicationConverter
+
+communication.internal.memory.id=memory
