--- a/extension/communication/external/memory/pom.xml
+++ b/extension/communication/external/memory/pom.xml
@@ -47,6 +47,7 @@
 
     <properties>
         <promena-communication-external-memory.version>0.9.0</promena-communication-external-memory.version>
+        <promena-communication-internal-memory.version>0.9.0</promena-communication-internal-memory.version>
     </properties>
 
     <dependencies>
