--- a/extension/communication/external/memory/promena-communication-external-memory-internal/pom.xml
+++ b/extension/communication/external/memory/promena-communication-external-memory-internal/pom.xml
@@ -19,6 +19,12 @@
         </dependency>
 
         <dependency>
+            <groupId>pl.beone.promena.communication.internal</groupId>
+            <artifactId>promena-communication-internal-memory-internal</artifactId>
+            <version>${promena-communication-internal-memory.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <scope>test</scope>
