--- a/extension/cluster/management/kubernetes/pom.xml
+++ b/extension/cluster/management/kubernetes/pom.xml
@@ -31,11 +31,6 @@
             <id>mulesoft</id>
             <url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
         </repository>
-
-        <repository>
-            <id>codelds</id>
-            <url>https://code.lds.org/nexus/content/groups/main-repo</url>
-        </repository>
     </repositories>
 
     <distributionManagement>
@@ -48,6 +43,13 @@
             <url>http://nexus.office.beone.pl/repository/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>beone-releases</id>
+            <url>http://nexus.office.beone.pl/repository/releases</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <properties>
         <promena-discovery-kubernetes.version>0.9.0</promena-discovery-kubernetes.version>
