--- a/sdk/promena-transformer/promena-transformer-archetype/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-archetype/pom.xml
@@ -16,11 +16,6 @@
             <id>beone-releases</id>
             <url>http://nexus.office.beone.pl/repository/releases</url>
         </repository>
-
-        <repository>
-            <id>codelds</id>
-            <url>https://code.lds.org/nexus/content/groups/main-repo</url>
-        </repository>
     </repositories>
 
     <distributionManagement>
@@ -33,6 +28,13 @@
             <url>http://nexus.office.beone.pl/repository/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>beone-releases</id>
+            <url>http://nexus.office.beone.pl/repository/releases</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <build>
         <extensions>
