--- a/sdk/promena-executable/promena-executable-archetype/pom.xml
+++ b/sdk/promena-executable/promena-executable-archetype/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>pl.beone.promena.sdk.maven.archetype</groupId>
     <artifactId>promena-executable-archetype</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.0-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
 
     <name>[SDK][ARCHETYPE] Promena executable</name>
