[added][promena-core] Composite transformation support [improved][promena-transformer] Model classes, builders and DSL

--- a/base/promena-core/configuration/promena-core-configuration/src/main/resources/application-kryo-classes.properties
+++ b/base/promena-core/configuration/promena-core-configuration/src/main/resources/application-kryo-classes.properties
@@ -7,26 +7,24 @@ akka.actor.kryo.classes.4=java.util.Collections$EmptyList
 akka.actor.kryo.classes.5=pl.beone.lib.typeconverter.applicationmodel.exception.TypeConversionException
 
 akka.actor.kryo.classes.6=pl.beone.promena.transformer.applicationmodel.mediatype.MediaType
-akka.actor.kryo.classes.7= pl.beone.promena.transformer.applicationmodel.exception.data.DataReadException
-akka.actor.kryo.classes.8= pl.beone.promena.transformer.applicationmodel.exception.data.DataDeleteException
-akka.actor.kryo.classes.9= pl.beone.promena.transformer.applicationmodel.exception.data.DataAccessibilityException
-akka.actor.kryo.classes.10=pl.beone.promena.transformer.applicationmodel.exception.transformer.TransformerException
-akka.actor.kryo.classes.11=pl.beone.promena.transformer.applicationmodel.exception.transformer.TransformerNotFoundException
-akka.actor.kryo.classes.12=pl.beone.promena.transformer.applicationmodel.exception.transformer.TransformerTimeoutException
-akka.actor.kryo.classes.13=pl.beone.promena.transformer.contract.descriptor.DataDescriptor
-akka.actor.kryo.classes.14=pl.beone.promena.transformer.contract.descriptor.TransformationDescriptor
-akka.actor.kryo.classes.15=pl.beone.promena.transformer.contract.descriptor.TransformedDataDescriptor
-akka.actor.kryo.classes.16=pl.beone.promena.transformer.internal.model.data.MemoryData
-akka.actor.kryo.classes.17=pl.beone.promena.transformer.internal.model.data.FileData
-akka.actor.kryo.classes.18=pl.beone.promena.transformer.internal.model.metadata.MapMetadata
-akka.actor.kryo.classes.19=pl.beone.promena.transformer.internal.model.parameters.MapParameters
+akka.actor.kryo.classes.7=pl.beone.promena.transformer.applicationmodel.exception.data.DataReadException
+akka.actor.kryo.classes.8=pl.beone.promena.transformer.applicationmodel.exception.data.DataDeleteException
+akka.actor.kryo.classes.9=pl.beone.promena.transformer.applicationmodel.exception.data.DataAccessibilityException
+akka.actor.kryo.classes.10=pl.beone.promena.transformer.contract.data.DataDescriptor
+akka.actor.kryo.classes.11=pl.beone.promena.core.applicationmodel.transformation.TransformationDescriptor
+akka.actor.kryo.classes.12=pl.beone.promena.transformer.contract.data.TransformedDataDescriptor
+akka.actor.kryo.classes.13=pl.beone.promena.transformer.internal.model.data.MemoryData
+akka.actor.kryo.classes.14=pl.beone.promena.transformer.internal.model.data.FileData
+akka.actor.kryo.classes.15=pl.beone.promena.transformer.internal.model.metadata.MapMetadata
+akka.actor.kryo.classes.16=pl.beone.promena.transformer.internal.model.parameters.MapParameters
 
-akka.actor.kryo.classes.20=pl.beone.promena.core.applicationmodel.exception.serializer.DeserializationException
-akka.actor.kryo.classes.21=pl.beone.promena.core.applicationmodel.exception.serializer.SerializationException
-akka.actor.kryo.classes.22=pl.beone.promena.core.internal.serialization.KryoSerializationService
-akka.actor.kryo.classes.23=pl.beone.promena.core.external.akka.actor.transformer.message.ToTransformMessage
-akka.actor.kryo.classes.24=pl.beone.promena.core.external.akka.actor.transformer.message.TransformedMessage
-akka.actor.kryo.classes.25=pl.beone.promena.core.external.akka.actor.serializer.message.ToDeserializeMessage
-akka.actor.kryo.classes.26=pl.beone.promena.core.external.akka.actor.serializer.message.DeserializedMessage
-akka.actor.kryo.classes.27=pl.beone.promena.core.external.akka.actor.serializer.message.ToSerializeMessage
-akka.actor.kryo.classes.28=pl.beone.promena.core.external.akka.actor.serializer.message.SerializedMessage
+akka.actor.kryo.classes.17=pl.beone.promena.core.applicationmodel.exception.transformer.TransformerException
+akka.actor.kryo.classes.18=pl.beone.promena.core.applicationmodel.exception.serializer.DeserializationException
+akka.actor.kryo.classes.19=pl.beone.promena.core.applicationmodel.exception.serializer.SerializationException
+akka.actor.kryo.classes.20=pl.beone.promena.core.internal.serialization.KryoSerializationService
+akka.actor.kryo.classes.21=pl.beone.promena.core.external.akka.actor.transformer.message.ToTransformMessage
+akka.actor.kryo.classes.22=pl.beone.promena.core.external.akka.actor.transformer.message.TransformedMessage
+akka.actor.kryo.classes.23=pl.beone.promena.core.external.akka.actor.serializer.message.ToDeserializeMessage
+akka.actor.kryo.classes.24=pl.beone.promena.core.external.akka.actor.serializer.message.DeserializedMessage
+akka.actor.kryo.classes.25=pl.beone.promena.core.external.akka.actor.serializer.message.ToSerializeMessage
+akka.actor.kryo.classes.26=pl.beone.promena.core.external.akka.actor.serializer.message.SerializedMessage
