--- a/base/promena-core/application-model/promena-core-application-model/pom.xml
+++ b/base/promena-core/application-model/promena-core-application-model/pom.xml
@@ -5,11 +5,18 @@
     <parent>
         <artifactId>promena-core</artifactId>
         <groupId>pl.beone.promena.core</groupId>
-        <version>0.9.0</version>
+        <version>0.9.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>promena-core-application-model</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>pl.beone.promena.transformer</groupId>
+            <artifactId>promena-transformer-contract</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
