--- a/sdk/promena/promena-parent/pom.xml
+++ b/sdk/promena/promena-parent/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>pl.beone.promena.sdk.maven.parent</groupId>
     <artifactId>promena-parent</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>[SDK][POM] Promena</name>
