--- a/extension/communication/external/memory/promena-communication-external-memory-internal/pom.xml
+++ b/extension/communication/external/memory/promena-communication-external-memory-internal/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>promena-communication-external-memory</artifactId>
         <groupId>pl.beone.promena.communication.external</groupId>
-        <version>0.9.0</version>
+        <version>0.9.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>promena-communication-external-memory-internal</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
