--- a/extension/communication/internal/memory/pom.xml
+++ b/extension/communication/internal/memory/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>pl.beone.promena.sdk.maven.parent</groupId>
         <artifactId>promena-extension-parent</artifactId>
-        <version>0.9.0</version>
+        <version>0.9.0-SNAPSHOT</version>
     </parent>
 
     <groupId>pl.beone.promena.communication.internal</groupId>
     <artifactId>promena-communication-internal-memory</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.0-SNAPSHOT</version>
 
     <name>[EXTENSION][COMMUNICATION][INTERNAL] Memory</name>
 
@@ -48,7 +48,7 @@
     </pluginRepositories>
 
     <properties>
-        <promena-communication-internal-memory.version>0.9.0</promena-communication-internal-memory.version>
+        <promena-communication-internal-memory.version>0.9.0-SNAPSHOT</promena-communication-internal-memory.version>
     </properties>
 
     <dependencies>
