--- a/extension/actor-creator/adaptive-load-balancing/pom.xml
+++ b/extension/actor-creator/adaptive-load-balancing/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>pl.beone.promena.sdk.maven.parent</groupId>
         <artifactId>promena-extension-parent</artifactId>
-        <version>0.9.0</version>
+        <version>0.9.0-SNAPSHOT</version>
     </parent>
 
     <groupId>pl.beone.promena.actor-creator</groupId>
     <artifactId>promena-actor-creator-adaptive-load-balancing</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.0-SNAPSHOT</version>
 
     <name>[EXTENSION][ACTOR CREATOR] Adaptive load balancing</name>
 
@@ -48,7 +48,7 @@
     </pluginRepositories>
 
     <properties>
-        <promena-actor-creator-adaptive-load-balancing.version>0.9.0</promena-actor-creator-adaptive-load-balancing.version>
+        <promena-actor-creator-adaptive-load-balancing.version>0.9.0-SNAPSHOT</promena-actor-creator-adaptive-load-balancing.version>
     </properties>
 
     <dependencies>
