--- a/extension/actor-creator/adaptive-load-balancing/promena-actor-creator-adaptive-load-balancing-external-akka/pom.xml
+++ b/extension/actor-creator/adaptive-load-balancing/promena-actor-creator-adaptive-load-balancing-external-akka/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>promena-actor-creator-adaptive-load-balancing</artifactId>
         <groupId>pl.beone.promena.actor-creator</groupId>
-        <version>0.9.0</version>
+        <version>0.9.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>promena-actor-creator-adaptive-load-balancing-external-akka</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
