--- a/extension/cluster/listener/member/pom.xml
+++ b/extension/cluster/listener/member/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>pl.beone.promena.sdk.maven.parent</groupId>
         <artifactId>promena-extension-parent</artifactId>
-        <version>0.9.0</version>
+        <version>0.9.0-SNAPSHOT</version>
     </parent>
 
     <groupId>pl.beone.promena.cluster.listener</groupId>
     <artifactId>promena-cluster-listener-member</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.0-SNAPSHOT</version>
 
     <name>[EXTENSION][CLUSTER][LISTENER] Member</name>
 
@@ -48,7 +48,7 @@
     </pluginRepositories>
 
     <properties>
-        <promena-listener-cluster-member.version>0.9.0</promena-listener-cluster-member.version>
+        <promena-listener-cluster-member.version>0.9.0-SNAPSHOT</promena-listener-cluster-member.version>
     </properties>
 
     <dependencies>
