--- a/extension/cluster/listener/member/promena-cluster-listener-member-configuration/pom.xml
+++ b/extension/cluster/listener/member/promena-cluster-listener-member-configuration/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>promena-cluster-listener-member</artifactId>
         <groupId>pl.beone.promena.cluster.listener</groupId>
-        <version>0.9.0</version>
+        <version>0.9.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
