--- a/extension/cluster/management/kubernetes/promena-cluster-management-kubernetes-configuration/pom.xml
+++ b/extension/cluster/management/kubernetes/promena-cluster-management-kubernetes-configuration/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>promena-cluster-management-kubernetes</artifactId>
         <groupId>pl.beone.promena.cluster.management</groupId>
-        <version>0.9.0</version>
+        <version>0.9.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
