--- a/extension/connector/http/pom.xml
+++ b/extension/connector/http/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>pl.beone.promena.sdk.maven.parent</groupId>
         <artifactId>promena-extension-parent</artifactId>
-        <version>0.9.0</version>
+        <version>0.9.0-SNAPSHOT</version>
     </parent>
 
     <groupId>pl.beone.promena.connector</groupId>
     <artifactId>promena-connector-http</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.0-SNAPSHOT</version>
 
     <name>[EXTENSION][CONNECTOR] HTTP</name>
 
@@ -49,7 +49,7 @@
     </pluginRepositories>
 
     <properties>
-        <promena-connector-http.version>0.9.0</promena-connector-http.version>
+        <promena-connector-http.version>0.9.0-SNAPSHOT</promena-connector-http.version>
     </properties>
 
     <dependencies>
