--- a/extension/connector/http/promena-connector-http-configuration/pom.xml
+++ b/extension/connector/http/promena-connector-http-configuration/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>pl.beone.promena.connector</groupId>
         <artifactId>promena-connector-http</artifactId>
-        <version>0.9.0</version>
+        <version>0.9.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
