[improved][promena-core] Getting getTransformationId in PropertiesTransformerConfig from properties based on ".id" end of key

--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__-configuration/src/main/resources/__rootArtifactId__-transformer.properties
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__-configuration/src/main/resources/__rootArtifactId__-transformer.properties
@@ -1,3 +1,3 @@
-transformer.${package}.${transformerClassName}.transformationId=${transformerId}
+transformer.${package}.${transformerClassName}.id=${transformerId}
 transformer.${package}.${transformerClassName}.priority=1
 transformer.${package}.${transformerClassName}.actors=1
