--- a/base/promena-transformer/promena-transformer-contract/pom.xml
+++ b/base/promena-transformer/promena-transformer-contract/pom.xml
@@ -16,5 +16,16 @@
             <groupId>pl.beone.promena.transformer</groupId>
             <artifactId>promena-transformer-application-model</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
